push local code to master

--- a/.github/workflows/allureReport.yml
+++ b/.github/workflows/allureReport.yml
@@ -47,3 +47,9 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
           publish_dir: allure-history
+
+      - name: Deploy pages
+        uses: JamesIves/github-pages-deploy-action@v4.5.0
+        with:
+          branch: gh-pages
+          folder: ./ExtentReport/Reports
