--- a/.github/workflows/allureReport.yml
+++ b/.github/workflows/allureReport.yml
@@ -32,24 +32,30 @@ jobs:
           ref: gh-pages
           path: gh-pages
 
-      - name: Build test report
-        uses: simple-elf/allure-report-action@v1.7
+      - name: Test marketplace action
+        uses: simple-elf/allure-report-action@master
         if: always()
+        id: allure-report
         with:
-          gh_pages: gh-pages
-          allure_history: allure-history
           allure_results: allure-results
+          gh_pages: gh-pages
+          allure_report: allure-report
+          allure_history: allure-history
 
-      - name: Publish test report
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Deploy report to Github Pages
         if: always()
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: gh-pages
-          publish_dir: allure-history
+        uses: peaceiris/actions-gh-pages@v2
+        env:
+          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PUBLISH_BRANCH: gh-pages
+          PUBLISH_DIR: allure-history
 
-      - name: Deploy pages
-        uses: JamesIves/github-pages-deploy-action@v4.5.0
+      - name: Post the link to the report
+        if: always()
+        uses: Sibz/github-status-action@v1
         with:
-          branch: gh-pages
-          folder: ./ExtentReport/Reports
+          authToken: ${{secrets.GITHUB_TOKEN}}
+          context: 'Test report'
+          state: 'success'
+          sha: ${{ github.event.pull_request.head.sha }}
+          target_url: simple-elf.github.io/github-allure-history/${{ github.run_number }}
