--- a/.github/workflows/allureReport.yml
+++ b/.github/workflows/allureReport.yml
@@ -24,20 +24,21 @@ jobs:
           ls
           mvn test -DsuiteName=${{ github.event.inputs.suiteName }}
 
-      - name: Load test report history
-        uses: actions/checkout@v3
+      #Allure
+      - name: Get Allure history
+        uses: actions/checkout@v2
         if: always()
         continue-on-error: true
         with:
           ref: gh-pages
           path: gh-pages
 
-      - name: Test marketplace action
+      - name: Allure Report action from marketplace
         uses: simple-elf/allure-report-action@master
         if: always()
         id: allure-report
         with:
-          allure_results: allure-results
+          allure_results: target/allure-results
           gh_pages: gh-pages
           allure_report: allure-report
           allure_history: allure-history
@@ -49,13 +50,3 @@ jobs:
           PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PUBLISH_BRANCH: gh-pages
           PUBLISH_DIR: allure-history
-
-      - name: Post the link to the report
-        if: always()
-        uses: Sibz/github-status-action@v1
-        with:
-          authToken: ${{secrets.GITHUB_TOKEN}}
-          context: 'Test report'
-          state: 'success'
-          sha: ${{ github.event.pull_request.head.sha }}
-          target_url: dhivaagar.github.io/DemoProject/${{ github.run_number }}
