--- a/.github/workflows/allureReport.yml
+++ b/.github/workflows/allureReport.yml
@@ -24,29 +24,45 @@ jobs:
           ls
           mvn test -DsuiteName=${{ github.event.inputs.suiteName }}
 
-      #Allure
-      - name: Get Allure history
-        uses: actions/checkout@v2
+      - name: Load test report history
+        uses: actions/checkout@v3
         if: always()
         continue-on-error: true
         with:
           ref: gh-pages
           path: gh-pages
 
-      - name: Allure Report action from marketplace
-        uses: simple-elf/allure-report-action@master
+      - name: Build test report
+        uses: simple-elf/allure-report-action@v1.7
         if: always()
-        id: allure-report
         with:
-          allure_results: target/allure-results
           gh_pages: gh-pages
-          allure_report: allure-report
           allure_history: allure-history
+          allure_results: allure-results
 
-      - name: Deploy report to Github Pages
+      - name: Publish test report
+        uses: peaceiris/actions-gh-pages@v3
         if: always()
-        uses: peaceiris/actions-gh-pages@v2
-        env:
-          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PUBLISH_BRANCH: gh-pages
-          PUBLISH_DIR: allure-history
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: allure-history
+
+  deploy:
+    needs: test
+    permissions:
+      pages: write
+      id-token: write
+
+    environment:
+      name: github-pages
+      url: ${{steps.deployment.outputs.page_url}} # How can i change this url??
+
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
+#      - name: Override page_url
+#        id: change-page-url
+#        run: echo "new_page_url=${{ steps.deployment.outputs.page_url }}notebook/" >> $GITHUB_OUTPUT
