--- a/.github/workflows/allureReport.yml
+++ b/.github/workflows/allureReport.yml
@@ -53,16 +53,11 @@ jobs:
     permissions:
       pages: write
       id-token: write
-
     environment:
       name: github-pages
-      url: ${{steps.deployment.outputs.page_url}} # How can i change this url??
-
+      url: ${\{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
-#      - name: Override page_url
-#        id: change-page-url
-#        run: echo "new_page_url=${{ steps.deployment.outputs.page_url }}notebook/" >> $GITHUB_OUTPUT
