--- a/.github/workflows/allureReport.yml
+++ b/.github/workflows/allureReport.yml
@@ -10,6 +10,8 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      allure_url: https://${{ github.repositoryUrl }}/${{ github.run_id }}
     steps:
       - uses: actions/checkout@v3
 
@@ -50,12 +52,9 @@ jobs:
 
   deploy:
     needs: test
-    permissions:
-      pages: write
-      id-token: write
     environment:
       name: github-pages
-      url: ${\{ steps.deployment.outputs.page_url }}
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
       - name: Deploy to GitHub Pages
