--- a/.github/workflows/allureReport.yml
+++ b/.github/workflows/allureReport.yml
@@ -10,8 +10,9 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    env:
-      allure_url: https://${{ github.repositoryUrl }}/${{ github.run_id }}
+    environment:
+      name: github-pages
+      url: https://dhivaagar.github.io/DemoProject/12/
     steps:
       - uses: actions/checkout@v3
 
@@ -49,14 +50,3 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
           publish_dir: allure-history
-
-  deploy:
-    needs: test
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
