push local code to master

--- a/.github/workflows/allureReport.yml
+++ b/.github/workflows/allureReport.yml
@@ -12,7 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: github-pages
-      url: https://dhivaagar.github.io/DemoProject/12/
+#      url: https://dhivaagar.github.io/DemoProject/12/
+      url: ${{ github.repositoryUrl }}/${{ github.run_id }}
     steps:
       - uses: actions/checkout@v3
 
