--- a/.github/workflows/allureReport.yml
+++ b/.github/workflows/allureReport.yml
@@ -13,7 +13,7 @@ jobs:
     environment:
       name: github-pages
 #      url: https://dhivaagar.github.io/DemoProject/12/
-      url: https://${{ github.repository }}/${{ github.run_number }}
+      url: https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/${{ github.run_number }}
     steps:
       - uses: actions/checkout@v3
 
