push local code to master

--- a/.github/workflows/DemoTest.yml
+++ b/.github/workflows/DemoTest.yml
@@ -15,6 +15,12 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
+      - name: Set Execution Policy (Not Recommended)
+        run: |
+          Set-ExecutionPolicy RemoteSigned -Scope CurrentUser  # Replace with the desired policy if needed
+      # Rest of your workflow steps...
 
       - name: Build and Test
-        run: mvn test -Dtest=selenium.ExampleTest
+        run: |
+          ls -al
+          mvn test -Dtest=selenium.ExampleTest
