--- a/.github/workflows/DemoTest.yml
+++ b/.github/workflows/DemoTest.yml
@@ -21,4 +21,6 @@ jobs:
       # Rest of your workflow steps...
 
       - name: Build and Test
-        run: mvn test -Dtest=selenium.ExampleTest
+        run: |
+          mvn clean install
+          mvn test -Dtest=selenium.ExampleTest
