push local code to master

--- a/.github/workflows/DemoTest.yml
+++ b/.github/workflows/DemoTest.yml
@@ -16,12 +16,14 @@ jobs:
           CHROMEDRIVER_VERSION=$(curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE)
           wget -q -O /tmp/chromedriver.zip https://chromedriver.storage.googleapis.com/$CHROMEDRIVER_VERSION/chromedriver_linux64.zip
           unzip -q /tmp/chromedriver.zip -d /tmp
+          echo "CHROMEDRIVER_PATH=/tmp/chromedriver" >> $GITHUB_ENV
           chmod +x /tmp/chromedriver
-        # Change permissions to executable
+        # Download and set ChromeDriver path to an environment variable
 
-      - name: Set up ChromeDriver
-        run: echo "::add-path::/tmp"
-        # Add ChromeDriver path to PATH
+      - name: Show ChromeDriver Path
+        run: |
+          echo "ChromeDriver Path: $CHROMEDRIVER_PATH"
+        # Print the ChromeDriver path
 
       - name: Verify ChromeDriver
         run: chromedriver --version
