push local code to master

--- a/.github/workflows/DemoTest.yml
+++ b/.github/workflows/DemoTest.yml
@@ -24,6 +24,8 @@ jobs:
         run: |
           echo "ChromeDriver Path: $CHROMEDRIVER_PATH"
           ls
+          cd $CHROMEDRIVER_PATH
+          ls
         # Print the ChromeDriver path
 
       - name: Verify ChromeDriver
