--- a/.github/workflows/DemoTest.yml
+++ b/.github/workflows/DemoTest.yml
@@ -26,7 +26,7 @@ jobs:
           ls
           cd ../..
           ls
-          cd _actions
+          cd _actions/_temp
           ls
         # Print the ChromeDriver path
 
