push local code to master

--- a/.github/workflows/DemoTest.yml
+++ b/.github/workflows/DemoTest.yml
@@ -15,10 +15,20 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-          cache: maven
 
-      - uses: browser-actions/setup-chrome@latest
-      - run: chrome --version
+      - name: Download ChromeDriver
+        run: |
+          CHROMEDRIVER_VERSION=$(curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE)
+          wget -q -O /tmp/chromedriver.zip https://chromedriver.storage.googleapis.com/$CHROMEDRIVER_VERSION/chromedriver_linux64.zip
+          unzip -q /tmp/chromedriver.zip -d /opt
+          CHROMEDRIVER_PATH="/opt/chromedriver"
+          echo "ChromeDriver Path: $CHROMEDRIVER_PATH"
+          chmod +x $CHROMEDRIVER_PATH
+        # Download and set ChromeDriver path to a variable, then print it
+
+      - name: Verify ChromeDriver
+        run: $CHROMEDRIVER_PATH --version
+          # Verify the ChromeDriver installation by running it
 
 #      - name: Set Execution Policy (Not Recommended)
 #        run: |
