--- a/.github/workflows/DemoTest.yml
+++ b/.github/workflows/DemoTest.yml
@@ -1,15 +1,30 @@
-name: CI
+name: Browser SetUp Test
 
 on:
   workflow_dispatch:
+    inputs:
+      browser:
+        type: choice
+        description: Which browser to test
+        required: true
+        options:
+          - chrome
+          - firefox
+          - edge
 
 jobs:
-  build:
-    runs-on: self-hosted
+  test:
+    runs-on: ubuntu-latest
+
+    services:
+      selenium:
+        image: selenium/standalone-${{ github.event.inputs.browser }}
+        options: --shm-size=2gb
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -17,21 +32,13 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install ca-certificates fonts-liberation libappindicator3-1 libasound2 libatk-bridge2.0-0 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgbm1 libgcc1 libglib2.0-0 libgtk-3-0 libnspr4 libnss3 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 lsb-release wget xdg-utils -y
-
-      - uses: browser-actions/setup-chrome@latest
-      - run: chrome --version
-        # Verify the ChromeDriver installation by running it
-
-      #      - name: Set Execution Policy (Not Recommended)
-      #        run: |
-      #          Set-ExecutionPolicy RemoteSigned -Scope CurrentUser  # Replace with the desired policy if needed
-      #      # Rest of your workflow steps...
-
       - name: Build and Test
         run: |
           mvn clean install
           mvn test -Dtest=selenium.ExampleTest
+
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: screenshots
+          path: screenshots/
