--- a/.github/workflows/DemoTest.yml
+++ b/.github/workflows/DemoTest.yml
@@ -34,8 +34,8 @@ jobs:
 
       - name: Build and Test
         run: |
-          mvn clean install
-          mvn test -Dtest=selenium.ExampleTest
+#          mvn clean install
+          mvn test -Dsuite=selenium.ExampleTest
 
       - uses: actions/upload-artifact@v3
         if: always()
