--- a/.github/workflows/DemoTest.yml
+++ b/.github/workflows/DemoTest.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Build and Test
         run: |
-#          mvn clean install
+          mvn clean install
           mvn test -Dsuite=selenium.ExampleTest
 
       - uses: actions/upload-artifact@v3
