TriggerAutomation.yml file created.

--- a/.github/workflows/TriggerAutomation.yml
+++ b/.github/workflows/TriggerAutomation.yml
@@ -2,7 +2,7 @@ name: Automation API Trigger Test
 
 on:
   repository_dispatch:
-    types: Sample
+    types: ApiTrigger
 
   workflow_dispatch:
     inputs:
