--- a/.github/workflows/TriggerAutomation.yml
+++ b/.github/workflows/TriggerAutomation.yml
@@ -14,8 +14,17 @@ on:
           - chrome
           - firefox
           - edge
+      myParam:
+        description: 'Example parameter'
+        required: true
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print Parameter
+        run: echo "My parameter is ${{ inputs.myParam }}"
+
   test:
     runs-on: ubuntu-latest
 
