--- a/.github/workflows/TriggerAutomation.yml
+++ b/.github/workflows/TriggerAutomation.yml
@@ -10,6 +10,7 @@ on:
         type: choice
         description: Which browser to test
         required: true
+        default: chrome
         options:
           - chrome
           - firefox
@@ -26,11 +27,6 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-
-    services:
-      selenium:
-        image: selenium/standalone-${{ github.event.inputs.browser }}
-        options: --shm-size=2gb
 
     steps:
       - name: Print Parameter
