--- a/.github/workflows/TriggerAutomation.yml
+++ b/.github/workflows/TriggerAutomation.yml
@@ -31,7 +31,7 @@ jobs:
 
     steps:
       - name: Print Parameter
-        run: echo "My parameter is ${{ github.event.client_payload.param1 }} and my browser is ${{ github.event.client_payload.browser1 }}"
+        run: echo "My parameter is ${{ github.event.client_payload.param1 }} and my browser is ${{ github.event.inputs.browser }}"
 
 
       - name: Checkout code
@@ -50,6 +50,7 @@ jobs:
           mvn test -Dsuite=selenium.ExampleTest
 
       - name: Trigger Workflow with Parameters
+        if: github.event_name == 'workflow_dispatch'  # Only trigger on workflow_dispatch
         run: |
           curl -X POST \
             -H "Accept: application/vnd.github.v3+json" \
