--- a/.github/workflows/TriggerAutomation.yml
+++ b/.github/workflows/TriggerAutomation.yml
@@ -31,7 +31,7 @@ jobs:
 
     steps:
       - name: Print Parameter
-        run: echo "My parameter is ${{ github.event.client_payload.param1 }} and my browser is ${{ github.event.inputs.browser }}"
+        run: echo "My parameter is ${{ github.event.client_payload.param1 }} and my browser is ${{ github.event.inputs.browser1 }}"
 
 
       - name: Checkout code
