--- a/.github/workflows/TriggerAutomation.yml
+++ b/.github/workflows/TriggerAutomation.yml
@@ -36,13 +36,12 @@ jobs:
 
       - name: Checkout code
         uses: actions/checkout@v2
-        shell: bash -e  # Set the shell for this step to bash with the -e option
+        shell: bash -e
+        run: git checkout ${{ github.event.client_payload.branch }} # Set the shell for this step to bash with the -e option
 
       - name: Change branch and Print Parameter
         shell: bash -e  # Set the shell for this step to bash with the -e option
-        run: |
-            git checkout ${{ github.event.client_payload.branch }}
-            echo "My parameter is ${{ github.event.client_payload.param1 }} branch ${{ github.event.client_payload.branch }} and my browser is ${{ github.event.client_payload.browser1 }}"
+        run: echo "My parameter is ${{ github.event.client_payload.param1 }} branch ${{ github.event.client_payload.branch }} and my browser is ${{ github.event.client_payload.browser1 }}"
 #      - name: Set up JDK 17
 #        uses: actions/setup-java@v3
 #        with:
