--- a/.github/workflows/TriggerAutomation.yml
+++ b/.github/workflows/TriggerAutomation.yml
@@ -33,39 +33,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Debug Branch Name
-        run: echo "My branch is ${{ github.event.client_payload.branch }}"
-
-      - name: Change branch
-        run: git checkout ${{ github.event.client_payload.branch }}
-
+      - name: Fetch all branches
+        run: git fetch --all
 
       - name: Print Parameter
         run: echo "My parameter is ${{ github.event.client_payload.param1 }} branch ${{ github.event.client_payload.branch }} and my browser is ${{ github.event.client_payload.browser1 }}"
-
-#      - name: Set up JDK 17
-#        uses: actions/setup-java@v3
-#        with:
-#          java-version: '17'
-#          distribution: 'temurin'
-#          cache: maven
-#
-#      - name: Build and Test
-#        run: |
-#          mvn clean install
-#          mvn test -Dsuite=selenium.ExampleTest
-#
-#      - name: Trigger Workflow with Parameters
-#        if: github.event_name == 'workflow_dispatch'  # Only trigger on workflow_dispatch
-#        run: |
-#          curl -X POST \
-#            -H "Accept: application/vnd.github.v3+json" \
-#            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-#            https://api.github.com/repos/Dhivaagar/DemoProject/dispatches \
-#             -d '{"event_type": "ApiTrigger", "client_payload": {"param1": "${{ github.event.inputs.myParam }}", "browser1": "${{ github.event.inputs.browser }}"}}'
-#
-#      - uses: actions/upload-artifact@v3
-#        if: always()
-#        with:
-#          name: screenshots
-#          path: screenshots/
