TriggerAutomation.yml file created.

--- a/.github/workflows/TriggerAutomation.yml
+++ b/.github/workflows/TriggerAutomation.yml
@@ -35,7 +35,14 @@ jobs:
 
       - name: Fetch all branches
         run: git fetch --all
+
       - name: Change branch
         run: git checkout ${{ github.event.client_payload.branch }}
+
       - name: Print Parameter
         run: echo "My parameter is ${{ github.event.client_payload.param1 }} branch ${{ github.event.client_payload.branch }} and my browser is ${{ github.event.client_payload.browser1 }}"
+
+      - name: Build and Test
+        run: |
+              mvn clean install
+              mvn test -Dsuite=selenium.ExampleTest
