--- a/.github/workflows/TriggerAutomation.yml
+++ b/.github/workflows/TriggerAutomation.yml
@@ -33,6 +33,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
       - name: Fetch all branches
         run: git fetch --all
 
@@ -44,5 +50,5 @@ jobs:
 
       - name: Build and Test
         run: |
-              mvn clean install
+              mvn clean install -Dmaven.test.skip=true -Dskipjar=true
               mvn test -Dsuite=selenium.SimpleTest
