--- a/.github/workflows/TriggerAutomation.yml
+++ b/.github/workflows/TriggerAutomation.yml
@@ -43,6 +43,7 @@ jobs:
         run: git fetch --all
 
       - name: Change branch
+        if : github.event_name == 'repository_dispatch'
         run: git checkout ${{ github.event.client_payload.branch }}
 
       - name: Print Parameter
