--- a/.github/workflows/DemoTest.yml
+++ b/.github/workflows/DemoTest.yml
@@ -5,24 +5,10 @@ on:
     types: Sample
 
   workflow_dispatch:
-    inputs:
-      browser:
-        type: choice
-        description: Which browser to test
-        required: true
-        options:
-          - chrome
-          - firefox
-          - edge
 
 jobs:
   test:
     runs-on: ubuntu-latest
-
-    services:
-      selenium:
-        image: selenium/standalone-${{ github.event.inputs.browser }}
-        options: --shm-size=2gb
 
     steps:
       - name: Checkout code
@@ -35,10 +21,20 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install ca-certificates fonts-liberation libappindicator3-1 libasound2 libatk-bridge2.0-0 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgbm1 libgcc1 libglib2.0-0 libgtk-3-0 libnspr4 libnss3 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 lsb-release wget xdg-utils -y
+
+      - uses: browser-actions/setup-chrome@latest
+        with:
+          install-dependencies: true
+
+
       - name: Build and Test
         run: |
-          mvn clean install
-          mvn test -Dsuite=selenium.ExampleTest
+          mvn clean install -Dmaven.test.skip=true -Dskipjar=true
+          mvn test -Dtest=selenium.ExampleTest
 
       - uses: actions/upload-artifact@v3
         if: always()
