--- a/.github/workflows/DemoTest.yml
+++ b/.github/workflows/DemoTest.yml
@@ -7,37 +7,27 @@ on:
   workflow_dispatch:
 
 jobs:
-  test:
-    runs-on: self-hosted
+  selenium_tests:
+    runs-on: self-hosted  # Specify your self-hosted runner here
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v2
         with:
           java-version: '17'
-          distribution: 'temurin'
-          cache: maven
 
-#      - name: Install dependencies
-#        run: |
-#          sudo apt-get update
-#          sudo apt-get install ca-certificates fonts-liberation libappindicator3-1 libasound2 libatk-bridge2.0-0 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgbm1 libgcc1 libglib2.0-0 libgtk-3-0 libnspr4 libnss3 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 lsb-release wget xdg-utils -y
+      - name: Install Maven
+        run: |
+          sudo apt update
+          sudo apt install maven
 
-#      - name: Install dependencies
-#        run: |
-#          sudo apt-get update
-#          sudo apt-get install -y chromium-chromedriver maven
-
-      - uses: browser-actions/setup-chrome@latest
-      - run: chrome --version
-          
-#      - uses: browser-actions/setup-chrome@latest
-#        with:
-#          install-dependencies: true
-
+      - name: Install Google Chrome
+        run: |
+          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          sudo apt install ./google-chrome-stable_current_amd64.deb
 
       - name: Build and Test
         run: |
