push local code to master

--- a/.github/workflows/DemoTest.yml
+++ b/.github/workflows/DemoTest.yml
@@ -17,7 +17,9 @@ jobs:
       - name: Build and Test
         run: |
           mvn clean install -Dmaven.test.skip=true -Dskipjar=true
-          mvn test -Dtest=selenium.ExampleTest
+          google-chrome --version
+          google-chrome
+#          mvn test -Dtest=selenium.ExampleTest
 
       - uses: actions/upload-artifact@v3
         if: always()
