--- a/.github/workflows/DemoTest.yml
+++ b/.github/workflows/DemoTest.yml
@@ -22,6 +22,9 @@ jobs:
 
       - name: Install Maven
         run: |
+          w
+          who
+          whoami
           sudo apt update
           sudo apt install maven
 
