push local code to master

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,8 @@
 # .github/workflows/main.yml
-name: Get List from YAML
+name: CI
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
 
 jobs:
   build:
@@ -18,14 +16,25 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '14'
-
-      - name: Install dependencies
-        run: npm install js-yaml
+        run: |
+          npm install
+          npm install js-yaml
+          npm install fs
 
       - name: Read list from YAML
         id: read-yaml
-        run: |
-          node -e "const fs = require('fs'); const yaml = require('js-yaml'); const fileContents = fs.readFileSync('list.yml', 'utf8'); const data = yaml.load(fileContents); console.log(`::set-output name=matrix::${JSON.stringify(data.items)}`);"
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const fs = require('fs');
+            const yaml = require('js-yaml');
+            const fileContents = fs.readFileSync('list.yml', 'utf8');
+            const data = yaml.load(fileContents);
+            return JSON.stringify(data.items);
+
+      - name: Set output
+        id: set-matrix
+        run: echo "::set-output name=matrix::${{ steps.read-yaml.outputs.result }}"
 
   test:
     needs: build
