--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '14'
+
+      - name: Install dependencies
         run: |
           npm install
           npm install js-yaml
