--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        item: ["item1","item2","item3"]
+        item: ${{ needs.build.outputs.matrix }}
 
     steps:
       - name: Checkout repository
